feat: go offline endpoint and improved login flow
